// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render a select element 1`] = `
<div>
  <div
    class="nhsuk-form-group"
  >
    <label
      class="nhsuk-label"
      for="select_«r0»"
      id="select_«r0»--label"
    >
      Label text goes here
    </label>
    <select
      aria-labelledby="select_«r0»--label"
      as="select"
      class="nhsuk-select"
      id="select_«r0»"
    >
      <option
        value="option-1"
      >
        Option 1
      </option>
      <option
        value="option-2"
      >
        Option 2
      </option>
      <option
        value="option-3"
      >
        Option 3
      </option>
    </select>
  </div>
</div>
`;

exports[`should render a select element with error 1`] = `
<div>
  <div
    class="nhsuk-form-group nhsuk-form-group--error"
  >
    <label
      class="nhsuk-label"
      for="select_«r4»"
      id="select_«r4»--label"
    >
      Label text goes here
    </label>
    <p
      class="nhsuk-error-message"
      id="select_«r4»--error-message"
    >
      <span
        class="nhsuk-u-visually-hidden"
      >
        Error: 
      </span>
      Error message goes here
    </p>
    <select
      aria-describedby="select_«r4»--error-message"
      aria-labelledby="select_«r4»--label"
      as="select"
      class="nhsuk-select nhsuk-select--error"
      id="select_«r4»"
    >
      <option
        value="option-1"
      >
        Option 1
      </option>
      <option
        value="option-2"
      >
        Option 2
      </option>
      <option
        value="option-3"
      >
        Option 3
      </option>
    </select>
  </div>
</div>
`;

exports[`should render a select element with hint 1`] = `
<div>
  <div
    class="nhsuk-form-group"
  >
    <label
      class="nhsuk-label"
      for="select_«r2»"
      id="select_«r2»--label"
    >
      Label text goes here
    </label>
    <div
      class="nhsuk-hint"
      id="select_«r2»_«r3»--hint"
    >
      Hint text goes here
    </div>
    <select
      aria-describedby="select_«r2»_«r3»--hint"
      aria-labelledby="select_«r2»--label"
      as="select"
      class="nhsuk-select"
      id="select_«r2»"
    >
      <option
        value="option-1"
      >
        Option 1
      </option>
      <option
        value="option-2"
      >
        Option 2
      </option>
      <option
        value="option-3"
      >
        Option 3
      </option>
    </select>
  </div>
</div>
`;
